1.Rivisitazione struttura della mia pagina. 2.creazione di un layout adatto ad ogni dimensione del viwport 3.inserimento immagini e icone 4.indentazione migliorata e completameneto del codice html e css.

--- a/index.html
+++ b/index.html
@@ -9,34 +9,96 @@
   <body>
   <!--div contenitore principale-->
    <div class="setgeneral">
-     <!--creo header contenente titolo principale
-     e titolo secondario-->
+      <!--creo header contenente titolo principale
+      titolo secondario e immagine di sfondo del contenitore -->
      <header >
        <h1>NATURAL</h1>
        <h2>ANOTHER BEAUTIFUL ORGANIC THEME</h2>
      </header>
+     <!--creo menu -->
      <nav class="setmenu">
-      <ul>
-       <li>HOME</li>
-       <li>ABOUT</li>
-       <li>PAGE TEMPLATES</li>
-       <li>A PARENT PAGE</li>
-       <li>FEAUTURES</li>
-       <li>BLOG</li>
-       <li>CONTACT</li>
+      <ul class="clearfix">
+       <li>&emsp;&emsp;HOME &emsp;&emsp;&emsp; </li>
+       <li>ABOUT&emsp;&emsp;&emsp;</li>
+       <li>PAGE TEMPLATES&emsp;&emsp;&emsp;</li>
+       <li>A PARENT PAGE&emsp;&emsp;&emsp;</li>
+       <li>FEAUTURES&emsp;&emsp;&emsp;</li>
+       <li>BLOG&emsp;&emsp;&emsp;</li>
+       <li>CONTACT&emsp;&emsp;&emsp;</li>
       </ul>
      </nav>
+     <!--chiusura menu-->
      <!--prima sezione della mia pagina completata-->
+     <!--apertura seconda sezione corpo principale-->
+     <!--crep contenitore per inserire un aside un
+         contenuto centrale e dei widget a detsra-->
      <div class="corpocentro">
-      <aside ></aside>
-      <section ></section>
-      <div class="widget">
-      <span class="dxtop"></span>
-      <span class="dxcen"></span>
-      <span class="dxbottom"></span>
+      <!--contenuto posto a sinistra-->
+      <aside class="sx">
+       <img class= "seticontitle" src="icone/rss.jpg" alt="rss">
+       <h3 class="seth3">Organic Themes</h3>
+       <p class="setp">How To Pick a Wordpress Theme For a 2019</p>
+       <p class="setp">The Update Gutenber Portfolio Theme </p>
+       <p class="setp">Black Friday Through Cyber Monday Deal For Wordpress
+                       Website Owners</p>
+       <p class="setp">To Ultimate Guide To Optimizing Your Wordpress Theme
+                       For Gutenberg</p>
+       <P class="setp">A Better WordPress Page Builder-
+                       Organic Builder Widgets Pro</p>
+      </aside>
+      <!-- contenuto centrale-->
+      <div class="setcenter">
+        <h3 class="seth3">THREE COLUMN</h3>
+        <p class="setstrong">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <!--widget posti a detsra-->
+      <div class="widgedx">
+        <!--windegt destra livello top-->
+       <div class="widget">
+        <h3 class="seth3">Text Widget </h3>
+        <p class="setpwid">This is an example of a text widget.You could
+                             write a brief introduction to your site,add links
+                             images and more using
+                             a text widget.It's
+                             pretty handy.
+        </p>
+       </div>
+       <!--widget destra livello center-->
+       <div class="widget">
+        <h3 class="seth3">Text Widget </h3>
+        <p class="setpwid">This is an example of a text widget.You could
+                               write a brief introduction to your site,add links
+                               images and more using a text widget.It's
+                               pretty handy.
+       </div>
+       <!--widget destra livello bottom-->
+       <div class="widget">
+        <h3 class="seth3">Text Widget </h3>
+        <p class="setpwid">This is an example of a text widget.You could
+                               write a brief introduction to your site,add links
+                               images,video and more using a text widget.It's
+                               pretty handy.
+       </div>
+      </div>
+     <!--chiusura seconda sezione-->
      </div>
-     <div>
-     <footer></footer>
+     <!--apertura terza sezione-->
+     <footer class="footer">
+       <span class="textfooter">Powered by Carmine Nicoletta</span>
+       <p class=hrgray></p>
+       <!--contenitore icone del mio footer-->
+       <div class"icone">
+         <img class="iconefoot"src="icone/iconafa.png" alt="facebook">
+         <img class="iconefoot instagram"src="icone/iconainsta.jpeg" alt="instagram">
+         <img class="iconefoot twitter"src="icone/iconatwit.png" alt="instagram">
+       </div>
+     <!--chiusura terza sezione-->
+     </footer>
    </div>
   </body>
 </html>
